syntax = "proto3";

package store;
option csharp_namespace = "Presentation.Grpc";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

enum OrderState {
  ORDER_STATE_UNSPECIFIED = 0;
  ORDER_STATE_CREATED = 1;
  ORDER_STATE_PROCESSING = 2;
  ORDER_STATE_COMPLETED = 3;
  ORDER_STATE_CANCELLED = 4;
}

enum OrderHistoryItemKind {
  ORDER_HISTORY_ITEM_KIND_UNSPECIFIED = 0;
  ORDER_HISTORY_ITEM_KIND_CREATED_ITEM = 1;
  ORDER_HISTORY_ITEM_KIND_ITEM_ADDED = 2;
  ORDER_HISTORY_ITEM_KIND_ITEM_REMOVED = 3;
  ORDER_HISTORY_ITEM_KIND_STATE_CHANGED = 4;
  ORDER_HISTORY_ITEM_KIND_ApprovalReceived = 5;
  ORDER_HISTORY_ITEM_KIND_PackingStarted = 6;
  ORDER_HISTORY_ITEM_KIND_PackingFinished = 7;
  ORDER_HISTORY_ITEM_KIND_DeliveryStarted = 8;
  ORDER_HISTORY_ITEM_KIND_DeliveryFinished = 9;
}

message OrderCreatedPayload {
  string created_by = 1;
}

message ItemAddedPayload {
  int64 product_id = 1;
  int32 quantity = 2;
}

message ItemRemovedPayload {
  int64 product_id = 1;
  int32 quantity = 2;
}

message StateChangedPayload {
  OrderState old_state = 1;
  OrderState new_state = 2;
}

message ApprovalResultPayload {
  bool is_approved = 1;
  string created_by = 2;
  google.protobuf.Timestamp created_at = 3;
}

message PackingStartedPayload {
  string packing_by = 1;
  google.protobuf.Timestamp started_at = 2;
}

message PackingFinishedPayload {
  google.protobuf.Timestamp finished_at = 1;
  bool is_finished_successfully = 2;
  google.protobuf.StringValue failure_reason = 3;
}

message DeliveryStartedPayload {
  string delivered_by = 1;
  google.protobuf.Timestamp started_at = 2;
}

message DeliveryFinishedPayload {
  google.protobuf.Timestamp finished_at = 1;
  bool is_finished_successfully = 2;
  google.protobuf.StringValue failure_reason = 3;
}

message OrderHistoryItem {
  int64 order_history_item_id = 1;
  int64 order_id = 2;
  google.protobuf.Timestamp created_at = 3;
  OrderHistoryItemKind kind = 4;

  oneof payload {
    OrderCreatedPayload order_created = 10;
    ItemAddedPayload item_added = 11;
    ItemRemovedPayload item_removed = 12;
    StateChangedPayload state_changed = 13;
    ApprovalResultPayload approval_result = 14;
    PackingStartedPayload packing_started = 15;
    PackingFinishedPayload packing_finished = 16;
    DeliveryStartedPayload delivery_started = 17;
    DeliveryFinishedPayload delivery_finished = 18;
  }
}

message CreateOrderRequest { 
  string created_by = 1;
}

message CreateOrderResponse {
  int64 order_id = 1;
}

message AddOrderItemRequest { 
  int64 order_id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
}

message AddOrderItemResponse {
  int64 order_item_id = 1;
}

message RemoveOrderItemRequest {
  int64 order_item_id = 1;
}

message RemoveOrderItemResponse {
  bool deleted = 1;
}

message ChangeStateRequest {
  int64 order_id = 1;
}

message ChangeStateResponse {
  bool updated = 1;
}

message GetOrderHistoryRequest {
  repeated int64 order_ids = 1;
  optional OrderHistoryItemKind kind = 2;
  int32 limit = 3;
  int64 cursor = 4;
}

message GetOrderHistoryResponse {
  repeated OrderHistoryItem items = 1;
}

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc AddOrderItem (AddOrderItemRequest) returns (AddOrderItemResponse);
  rpc RemoveOrderItem (RemoveOrderItemRequest) returns (RemoveOrderItemResponse);
  rpc StartProcessing (ChangeStateRequest) returns (ChangeStateResponse);
  rpc Complete (ChangeStateRequest) returns (ChangeStateResponse);
  rpc Cancel (ChangeStateRequest) returns (ChangeStateResponse);
  rpc GetOrderHistory (GetOrderHistoryRequest) returns (GetOrderHistoryResponse);
  rpc GetOrderHistoryStream (GetOrderHistoryRequest) returns (stream OrderHistoryItem);
}